--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -7,7 +7,7 @@
 		<!-- start post -->
 		{{#post}}
 
-			<div class="intro">
+			<div class="main-content">
 				{{#if feature_image}}
 					<div class="featured-media" style="background-image: url({{feature_image}});">
 					</div>
