--- a/src/less/page.less
+++ b/src/less/page.less
@@ -2,7 +2,7 @@
 @import "mixin.less";
 
 .page-template {
-  background: white;
+  background: #ecf1f9;
   display: inline-block;
 
   .post-header {
@@ -38,6 +38,10 @@
       z-index: 40;
       display: block;
     }
+  }
+
+  .main-content {
+        box-shadow: 0 0 5px rgba(65,67,144,.15);
   }
 
   .main-header {
