--- a/src/less/post.less
+++ b/src/less/post.less
@@ -785,7 +785,7 @@
 .post {
 	padding: 0;
 	background: @white;
-	margin-bottom: 20px;
+	margin-bottom: 0;
 	position: relative;
 	overflow: hidden;
 	order: 1;
