--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -6,6 +6,10 @@
 	box-shadow: @shadow-color;
 	margin-bottom: 40px;
 
+	@media(max-width:800px){
+		margin-bottom: 30px;
+	}
+
 	@media(max-width:600px){
 		margin-bottom: 20px;
 	}
