--- a/custom-signup-account.hbs
+++ b/custom-signup-account.hbs
@@ -37,18 +37,21 @@
 
 						<form id="create-a-user">
 							<label for="create-a-user-email">Email:</label>
-							<input type="text" class="form-control" id="create-a-user-email" aria-label="create-a-user-email" />
+							<input type="text" class="form-control" id="create-a-user-email" aria-label="create-a-user-email" autocomplete="email" />
 							<label for="create-a-user-password">Password:</label>
 							<input type="password" class="form-control" id="create-a-user-password" aria-label="create-a-user-password" />
 							<button class="btn btn-success" onclick="handleSignup()">Create Account</button>
+							<div id="finished-registration" hidden>
+				      	<a class="btn btn-success" href="/">Ok cool</a>
+					    </div>
 						</form>
-						<a class="secondarylink">Sign in instead</a>
+						<a class="secondarylink"><i class="far fa-arrow-left"></i> Actually nevermind</a>
 					</div>
 
 					<div id="resend-confirmation" hidden>
 						<h4>Send a New Confirmation Email</h4>
 						<label for="resend-confirmation-email">Email:</label>
-						<input type="text" class="form-control" id="resend-confirmation-email" aria-label="resend-confirmation-email" />
+						<input type="text" class="form-control" id="resend-confirmation-email" aria-label="resend-confirmation-email" autocomplete="new-password"/>
 						<button class="btn btn-success" onclick="handleResendConfirmation()">Re-Send Confirmation Emai </button>
 						<a href="/" class="btn btn-secondary" onclick="showControlPanel()">Go Back</a>
 					</div>
