--- a/src/less/login.less
+++ b/src/less/login.less
@@ -1,15 +1,19 @@
 @import "variables.less";
 .menu-wrapper {
   position: absolute;
-  right: 41px;
-  top: 79px;
+  right: 31px;
+  top: 69px;
   box-shadow: 3px 3px 5px rgba(137, 143, 171, 0.35);
   overflow-x: hidden;
   width: 250px;
-      height: 285px;
+  height: 285px;
   z-index: 3;
   opacity: 0;
   transition: all .1s ease-out;
+
+  @media(max-width: 800px) {
+    display: none;
+  }
 
   #info {
     z-index: auto;
@@ -26,15 +30,15 @@
     display: none;
 
     #error {
-      color: #67274f;
+      color: #902454;
       line-height: 1.3;
       height: auto;
       display: none;
-      padding: 13px 0;
+      padding: 13px 5%;
       position: absolute;
       top: 0;
       z-index: 9;
-      width: 100%;
+      width: 90%;
 
       &::before {
         content: "\f071";
@@ -67,7 +71,7 @@
     top: 0;
     position: relative;
     padding: 30px 20px;
-    background: #fff;
+    background: linear-gradient(185deg,#ebf4f7,#dfe9ff);
     -webkit-transition: all .1s ease-out;
     transition: all .1s ease-out;
     height:100%
@@ -97,6 +101,10 @@
 
   label {
     font-size: 0.8em;
+
+    i {
+      margin-right: 5px;
+    }
   }
 
   h4 {
@@ -135,7 +143,7 @@
 
   .btn {
     font-size: 14px;
-      font-family: AvenirNextLTPro-Medium,serif;
+      font-family: CompassSans-Medium;
       text-transform: uppercase;
       padding: 13px 20px;
       line-height: 1;
@@ -202,7 +210,7 @@
 .secondarylink {
   font-size: 10px!important;
   letter-spacing: 1px;
-  color: #6a83a5;
+  color: white;
   text-align: center;
   Width: 100%;
   display: block;
@@ -210,14 +218,14 @@
   text-transform: uppercase;
   position: absolute;
   bottom: 0;
-  background: #ecf4f7;
+  background: #32364a;
   padding: 5px;
   border-top: 1px solid #d4e3e8;
   transition: all .1s ease-out;
 
   &:hover {
     cursor:pointer;
-    background: #a5bcc5;
+    background: #4d5684;
     color: white;
   }
 }
@@ -231,4 +239,8 @@
   opacity: 0;
   z-index: 1;
   display:none;
+
+  @media(max-width: 800px) {
+    display: none;
+  }
 }
