--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -152,7 +152,7 @@
 		float: right;
 		display: flex;
 		justify-content: space-between;
-		padding: 30px 40px 0 0;
+		padding: 20px 30px 0 0;
 		margin: 0;
 		list-style: none;
 		align-items: center;
@@ -168,13 +168,17 @@
 			 position: relative;
 			border-right: 1px solid rgba(255, 255,255, 0);
 
+			@media(max-width: 800px) {
+		    display: none;
+		  }
+
 			&:hover {
 				cursor: pointer;
 			}
 
 			.accountback {
 				opacity: 0;
-				background: white;
+				background: #e5f3f8;;
 				z-index: 0;
 				position: absolute;
 				top: 0;
