--- a/custom-signup-account.hbs
+++ b/custom-signup-account.hbs
@@ -45,7 +45,7 @@
 				      	<a class="btn btn-success" href="/">Ok cool</a>
 					    </div>
 						</form>
-						<a class="secondarylink"><i class="far fa-arrow-left"></i> Actually nevermind</a>
+						<a class="secondarylink"><i class="fal fa-arrow-left"></i> Actually nevermind</a>
 					</div>
 
 					<div id="resend-confirmation" hidden>
