--- a/custom-tag-archive.hbs
+++ b/custom-tag-archive.hbs
@@ -27,30 +27,25 @@
 								{{#foreach tags}}
 									<div class="tag-wrapper">
 										<a href="{{url}}">
-											<div class="img-wrapper {{#unless feature_image}}no-image{{/unless}}" {{#if feature_image}} style="background-image: url({{feature_image}});" {{/if}}>
-												<div class="tag-title">
-													<h2>{{meta_title}}</h2>
-													<div class="meta-info">
+											<div class="img-wrapper {{#unless feature_image}}no-image{{/unless}}" {{#if feature_image}} style="background-image: url({{feature_image}});"{{/if}} ></div>
+													<div class="description">
+														<h2>{{meta_title}}</h2>
+														<p>{{description}}</p>
 														<span>{{plural count.posts empty=(t "0 Post") singular=(t "% Post") plural=(t "% Posts")}}</span>
 													</div>
 										</a>
 									</div>
-									{{#if description}}
-										<div class="description"><p>{{description}}</p></div>
-									{{/if}}
+						{{/foreach}}
+						{{/get}}
 						</div>
 			</div>
-			{{/foreach}}
-			{{/get}}
+			</article>
+			{{/post}}
+			<!-- end post -->
 		</div>
-		</article>
-		{{/post}}
-		<!-- end post -->
-	</div>
 
 
-	<!-- end main post area -->
-	</div>
+		<!-- end main post area -->
 	</div>
 </section>
 <!-- end site's main content area -->
