--- a/default.hbs
+++ b/default.hbs
@@ -20,14 +20,20 @@
 	<script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.0.8/stitch.js"></script>
 
 	<script src="{{asset "/js/includes/jquery.min.js"}}"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 	<script src="{{asset "/js/includes/secret.js"}}"></script>
 	{{#is "post"}}
 		<meta property="og:image" content="{{img_url feature_image}}">
 	{{else}}
 		<meta property="og:image" content="{{@blog.cover_image}}"/>
 	{{/is}}
-
+	<script>
+	const {
+	Stitch,
+	UserPasswordAuthProviderClient,
+	UserPasswordCredential
+} = stitch;
+</script>
 	{{! inserting theme config partial}}
 	{{> config}}
 	{{> analytics}}
