--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -18,10 +18,10 @@
 
 .page-about {
   margin-bottom: 0;
-  font-weight:500;
+  font-weight: 500;
 
   .page-title {
-    margin: 40px 40px 30px!important;
+    margin: 40px 40px 30px!important !important;
     font-weight: 500;
     @media(max-width: 1100px) {
       font-size: 3em;
@@ -34,7 +34,7 @@
       margin: 0 40px 20px !important;
     }
     @media(max-width: 800px) {
-      display:flex;
+      display: flex;
       flex-direction: column;
       margin: -14px 0 0 !important;
     }
@@ -49,20 +49,17 @@
     margin: 0 0 40px !important;
     height: 400px;
     display: block;
-
     @media(max-width: 1100px) {
       width: 100%;
       margin: -12px auto 20px 0 !important;
     }
-
     @media(max-width: 800px) {
       height: 451px;
     }
-
     @media(max-width: 600px) {
       width: 100%;
       height: 360px;
-      margin: -12px 0 10px 0!important;
+      margin: -12px 0 10px 0 !important;
       top: -7px;
     }
     @media(max-width: 470px) {
@@ -85,11 +82,9 @@
     align-content: flex-start;
     flex-flow: row wrap;
     margin: 0 40px 20px;
-
     @media(max-width: 1040px) {
       margin: 0 10px 30px;
     }
-
     @media(max-width: 800px) {
       margin: 0 30px 30px;
     }
@@ -107,7 +102,6 @@
     width: 42%;
     border-right: 1px solid #dcdcdc!important;
     border-bottom: 1px solid #dcdcdc !important;
-
     @media(max-width: 800px) {
       padding: 20px;
       width: 90%!important;
@@ -178,7 +172,7 @@
         width: 100%;
       }
       @media(max-width: 1040px) {
-        margin-left: 0px;
+        margin-left: 0;
       }
     }
 
@@ -247,9 +241,10 @@
   }
 
   p {
-    font-size: 16px;
+    font-size: 14px;
     color: #505050;
-    line-height: 1.8;
+    margin: 0 auto;
+    font-weight: 100;
   }
 
   .tag-wrapper {
@@ -271,15 +266,6 @@
   background: linear-gradient(0deg, rgba(2, 0, 36, 0) 0%, #001b2f 100%);
   height: 204px;
   padding: 20px 20px 0;
-
-  h2 {
-    line-height: 1;
-    font-size: 1.4em;
-    margin: 0;
-    font-family: 'AvenirNextLTPro-Regular',sans-serif;
-    height: fit-content;
-    text-align: left;
-  }
 
   span {
     font-size: 1.1em;
@@ -304,13 +290,13 @@
     width: 48%;
     margin: 0 0 20px;
     border: 1px solid #dadada;
-        height: 299px;
+    height: fit-content;
     transition: all 0.3s ease-out;
     @media(max-width: 800px) {
       width: 100%;
       margin: 0 0 15px;
 
-      &:last-of-type{
+      &:last-of-type {
         margin-bottom: 0;
       }
     }
@@ -335,85 +321,69 @@
       border: 1px solid @theme-color;
     }
 
+    .img-wrapper {
+      background-size: cover;
+      background-position: center;
+      text-align: center;
+      width: 100%;
+      height: 180px;
+      position: relative;
+    }
 
-      .img-wrapper {
-        background-size: cover;
-        background-position: center;
-        text-align: center;
-        width: 100%;
-        height: 225px;
-        position: relative;
-      }
+    .meta-info {
+      font-weight: 900;
+      color: white;
+      font-size: 12px;
+      padding: 0;
+      text-align: left;
+    }
 
-      .page-head {
+    .description {
+      padding: 15px;
+      background: rgba(255,255,255,.9);
+      margin: 0;
+      position: relative;
+      bottom: 0;
+      color: #162c52;
+      font-family: AvenirNextLTPro-Medium,AvenirNextLTPro-Light;
+      width: auto;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      align-items: left;
+          height: fit-content;
+      flex-direction: column;
+
+      h2 {
+        color: #37363e!important;
+        font-size: 1.2em;
+        line-height: 1;
         margin: 0;
-        padding: 0;
-      }
-
-      .meta-info {
-        font-weight: 900;
-        color: white;
-        font-size: 12px;
-        padding: 0;
-        text-align: left;
-
-        i {
-          margin-right: 7px;
-        }
-      }
-
-      .description {
-        padding: 15px;
-        background: rgba(255,255,255,.9);
-        margin: 0;
-        position: relative;
-        bottom: 0;
-        color: #162c52;
-        font-family: AvenirNextLTPro-Medium,AvenirNextLTPro-Light;
-        width: auto;
-        display: flex;
-        align-items: center;
-        height: 45px;
+        font-weight: 500;
       }
 
       p {
         font-size: 14px;
         color: @text-color;
-        margin: 0 auto;
-
+        margin: 5px 0;
+        line-height: 1.2;
+            text-align: left;
       }
 
-      &.no-image {
-        .bg-wrapper {
-          .overlay {
-            color: @text-color;
-
-            .tag-title {
-              color: @text-color-heading;
-            }
-          }
-        }
-      }
-
-      &:hover {
-        text-decoration: none;
-        background: @hover-color;
-
-        .bg-wrapper {
-          .overlay {
-            background: @hover-color !important;
-          }
-        }
+      span {
+        font-size: 0.7em;
+        line-height: 1.5;
+        color: #37363F !important;
       }
     }
-
-}
-
-.page-projects {
-  .main-content {
-    box-shadow: 0 0 5px rgba(65,67,144,.15);
-    background: white;
-    padding: 3px 40px 20px;
-    width: auto;
   }
 }
+
+  .page-projects {
+    .main-content {
+      box-shadow: 0 0 5px rgba(65,67,144,.15);
+      background: white;
+      padding: 3px 40px 20px;
+      width: auto;
+    }
+  }
