--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -148,8 +148,8 @@
 	}
 
 	.menu {
-		/*width: 350px; Delete this later */
-		width: 300px;
+		width: 350px;
+		/*width: 300px;Delete this later */
 		float: right;
 		display: flex;
 		justify-content: space-between;
@@ -168,7 +168,7 @@
 			transition: all .1s ease-out;
 			 position: relative;
 			border-right: 1px solid rgba(255, 255,255, 0);
-			display: none; /* Delete this later */
+			/*display: none;  Delete this later */
 
 			@media(max-width: 800px) {
 		    display: none;
