--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -67,176 +67,156 @@
 						'</li>';
         }
     })
-</script>
 
 
-<script>
+			// DOM Element Variables
+			const loginFormEl = document.getElementById("login");
+			const loginEmailEl = document.getElementById("login-email");
+			const loginPasswordEl = document.getElementById("login-password");
+			const notificationEl = document.getElementById("info");
+			const loggedInEl = document.getElementById("logged-in");
+			const successEl = document.getElementById("success");
+			const errorEl = document.getElementById("error");
+
+			// Notification Functions
+			function displayError(errorMessage) {
+				clearNotifications();
+				errorEl.innerText = errorMessage;
+				$('#error').css('display', 'block');
+				$('#info').css('display', 'block');
+			}
+
+			function displaySuccess(successMessage) {
+				clearNotifications();
+				$('#success').css('display', 'block');
+				$('#info').css('display', 'block');
+				successEl.innerText = successMessage
+			}
+
+			function clearNotifications() {
+				[errorEl, successEl].forEach(el => el.innerText = "")
+			}
+
+			// Helper Functions
+			function clearFields(fields) {
+				fields.forEach(field => field.value = "")
+			}
+
+			function toggleHiddenElementById(id) {
+				document.getElementById(id).classList.toggle("hidden");
+			}
+
+			// UI State Transitions
+			function showRegistrationForm() {
+				clearNotifications();
+				resendConfirmationEl.hidden = true;
+				controlPanelEl.hidden = true;
+				registerFormEl.hidden = false;
+				loggedInEl.hidden = true;
+				postRegistrationEl.hidden = true;
+			}
+
+			function showLoginForm() {
+				clearNotifications();
+				resendConfirmationEl.hidden = true;
+				controlPanelEl.hidden = true;
+				loginFormEl.hidden = false;
+				loggedInEl.hidden = true;
+				postRegistrationEl.hidden = true;
+			}
+
+			function showControlPanel() {
+				clearNotifications()
+				resendConfirmationEl.hidden = true;
+				controlPanelEl.hidden = false;
+				loginFormEl.hidden = true;
+				registerFormEl.hidden = true;
+				loggedInEl.hidden = true;
+				postRegistrationEl.hidden = true;
+			}
+
+			function showResendConfirmationForm() {
+				clearNotifications()
+				resendConfirmationEl.hidden = false;
+				controlPanelEl.hidden = true;
+				loginFormEl.hidden = true;
+				registerFormEl.hidden = true;
+				loggedInEl.hidden = true;
+				postRegistrationEl.hidden = true;
+			}
+
+			function showLoggedInState() {
+				clearFields([loginEmailEl, loginPasswordEl]);
+				clearNotifications()
+				resendConfirmationEl.hidden = true;
+				controlPanelEl.hidden = true;
+				loginFormEl.hidden = true;
+				registerFormEl.hidden = true;
+				loggedInEl.hidden = false;
+				postRegistrationEl.hidden = true;
+			}
+
+			function showPostRegistrationState() {
+				clearFields([registerEmailEl, registerPasswordEl]);
+				resendConfirmationEl.hidden = true;
+				controlPanelEl.hidden = true;
+				loginFormEl.hidden = true;
+				registerFormEl.hidden = true;
+				loggedInEl.hidden = true;
+				postRegistrationEl.hidden = false;
+			}
+
+			function setPostRegistrationState() {
+				// Clear registration form inputs then hide the form
+				clearFields([registerEmailEl, registerPasswordEl]);
+				toggleHiddenElementById("create-a-user");
+				return Promise.resolve()
+			}
 
 
 
-	async function handleLogout() {
-		await stitchClient.auth.logout();
-		showControlPanel();
-	}
+	$( document ).ready(function() {
 
-	async function handleResendConfirmation() {
-		const email = resendConfirmationEmailEl.value;
-		await emailPasswordClient.resendConfirmationEmail(email);
-		showControlPanel();
-	}
+		  $('#account').on('click', function(event) {
+		    event.preventDefault();
+		    $('.overlay').css('display', 'block');
+		    $('.accountback').animate({
+		      opacity: 1
+		    }, 100, 'swing');
 
-	// DOM Element Variables
-	const loginFormEl = document.getElementById("login");
-	const loginEmailEl = document.getElementById("login-email");
-	const loginPasswordEl = document.getElementById("login-password");
-	const notificationEl = document.getElementById("info");
-	const loggedInEl = document.getElementById("logged-in");
-	const successEl = document.getElementById("success");
-	const errorEl = document.getElementById("error");
+		    $('.menu-wrapper').animate({
+		      opacity: 1
+		    }, 100, 'swing');
 
-	// Notification Functions
-	function displayError(errorMessage) {
-		clearNotifications();
-		errorEl.innerText = errorMessage;
-		$('#error').css('display', 'block');
-		$('#info').css('display', 'block');
-	}
+		    $('.overlay').animate({
+		      opacity: .3
+		    }, 100, 'swing');
 
-	function displaySuccess(successMessage) {
-		clearNotifications();
-		$('#success').css('display', 'block');
-		$('#info').css('display', 'block');
-		successEl.innerText = successMessage
-	}
+		    return false;
 
-	function clearNotifications() {
-		[errorEl, successEl].forEach(el => el.innerText = "")
-	}
+		  });
 
-	// Helper Functions
-	function clearFields(fields) {
-		fields.forEach(field => field.value = "")
-	}
+		  $('.overlay').on('click', function(event) {
+		    $('.overlay').animate({
+		      opacity: 0
+		    }, 100, 'swing', function() {
+		      $('.overlay').css('display', 'none');
+		    });
 
-	function toggleHiddenElementById(id) {
-		document.getElementById(id).classList.toggle("hidden");
-	}
+		    $('.accountback').animate({
+		      opacity: 0
+		    }, 100, 'swing');
 
-	// UI State Transitions
-	function showRegistrationForm() {
-		clearNotifications();
-		resendConfirmationEl.hidden = true;
-		controlPanelEl.hidden = true;
-		registerFormEl.hidden = false;
-		loggedInEl.hidden = true;
-		postRegistrationEl.hidden = true;
-	}
-
-	function showLoginForm() {
-		clearNotifications();
-		resendConfirmationEl.hidden = true;
-		controlPanelEl.hidden = true;
-		loginFormEl.hidden = false;
-		loggedInEl.hidden = true;
-		postRegistrationEl.hidden = true;
-	}
-
-	function showControlPanel() {
-		clearNotifications()
-		resendConfirmationEl.hidden = true;
-		controlPanelEl.hidden = false;
-		loginFormEl.hidden = true;
-		registerFormEl.hidden = true;
-		loggedInEl.hidden = true;
-		postRegistrationEl.hidden = true;
-	}
-
-	function showResendConfirmationForm() {
-		clearNotifications()
-		resendConfirmationEl.hidden = false;
-		controlPanelEl.hidden = true;
-		loginFormEl.hidden = true;
-		registerFormEl.hidden = true;
-		loggedInEl.hidden = true;
-		postRegistrationEl.hidden = true;
-	}
-
-	function showLoggedInState() {
-		clearFields([loginEmailEl, loginPasswordEl]);
-		clearNotifications()
-		resendConfirmationEl.hidden = true;
-		controlPanelEl.hidden = true;
-		loginFormEl.hidden = true;
-		registerFormEl.hidden = true;
-		loggedInEl.hidden = false;
-		postRegistrationEl.hidden = true;
-	}
-
-	function showPostRegistrationState() {
-		clearFields([registerEmailEl, registerPasswordEl]);
-		resendConfirmationEl.hidden = true;
-		controlPanelEl.hidden = true;
-		loginFormEl.hidden = true;
-		registerFormEl.hidden = true;
-		loggedInEl.hidden = true;
-		postRegistrationEl.hidden = false;
-	}
-
-	function setPostRegistrationState() {
-		// Clear registration form inputs then hide the form
-		clearFields([registerEmailEl, registerPasswordEl]);
-		toggleHiddenElementById("create-a-user");
-		return Promise.resolve()
-	}
-
-	function handleError(err) {
-		console.error(err)
-		const errType = err.message || "Error!"
-		const msg = ({
-			"invalid username/password": "Invalid username or password was entered. Please try again.",
-			"name already in use": "An account already exists for that email."
-		})[errType] || errType
-		displayError(msg);
-		$('#info').css('opacity', '1');
-		$('#login').css('padding', '45px 20px');
-		$('.menu-wrapper').css('height', '306px');
-	}
-
-	$('#account').on('click', function(event) {
-		event.preventDefault();
-		$('.overlay').css('display', 'block');
-		$('.accountback').animate({
-			opacity: 1
-		}, 100, 'swing');
-
-		$('.menu-wrapper').animate({
-			opacity: 1
-		}, 100, 'swing');
-
-		$('.overlay').animate({
-			opacity: .3
-		}, 100, 'swing');
-
-		return false;
-
-	});
-
-	$('.overlay').on('click', function(event) {
-		$('.overlay').animate({
-			opacity: 0
-		}, 100, 'swing', function() {
-			$('.overlay').css('display', 'none');
+		    $('.menu-wrapper').animate({
+		      opacity: 0
+		    }, 100, 'swing');
+		  });
 		});
 
-		$('.accountback').animate({
-			opacity: 0
-		}, 100, 'swing');
 
-		$('.menu-wrapper').animate({
-			opacity: 0
-		}, 100, 'swing');
-	});
 </script>
+
+
 
 	{{ghost_foot}}
 </body>
