--- a/src/less/login.less
+++ b/src/less/login.less
@@ -1,4 +1,5 @@
 @import "variables.less";
+
 .menu-wrapper {
   position: absolute;
   right: 31px;
@@ -9,8 +10,8 @@
   height: 285px;
   z-index: 3;
   opacity: 0;
-  transition: all .1s ease-out;
-
+  transition: all 0.1s ease-out;
+  background: linear-gradient(185deg,#ebf4f7,#dfe9ff);
   @media(max-width: 800px) {
     display: none;
   }
@@ -26,16 +27,15 @@
     padding: 0;
     opacity: 0;
     width: 100%;
-        background: white;
+    background: white;
     display: none;
 
     #error {
       color: #902454;
-      line-height: 1.3;
-      height: auto;
+      line-height: 1.2;
       display: none;
-      padding: 13px 5%;
-      position: absolute;
+      padding: 20px 5%;
+      position: relative;
       top: 0;
       z-index: 9;
       width: 90%;
@@ -53,96 +53,97 @@
       }
     }
 
-    #success{
+    #success {
       background: #e7f9ef;
       color: #27674d;
       line-height: 1.3;
       height: auto;
       display: none;
-      padding: 10px 15%
+      padding: 10px 15%;
+      position: relative;
     }
   }
 
-.dropdown-menu {
-
-  #signup,
-  #login {
-    width: 210px;
-    top: 0;
+  .dropdown-menu {
     position: relative;
-    padding: 30px 20px;
-    background: linear-gradient(185deg,#ebf4f7,#dfe9ff);
-    -webkit-transition: all .1s ease-out;
-    transition: all .1s ease-out;
-    height:100%
-  }
 
-  #login {
-    left:0;
-  }
-
-  form {
-    text-align: left;
-  }
-
-
-
-  * {
-    text-shadow: none;
-  }
-
-  #create-a-user {
-    display: block;
-  }
-
-  a {
-    color: white !important;
-  }
-
-  label {
-    font-size: 0.8em;
-
-    i {
-      margin-right: 5px;
+    #login,
+    #signup {
+      width: 210px;
+      top: 0;
+      position: relative;
+      padding: 30px 20px;
+      -webkit-transition: all 0.1s ease-out;
+      transition: all 0.1s ease-out;
+      height:100%;
+      position: relative;
+      height: -webkit-fill-available;
     }
-  }
 
-  h4 {
-    font-size: 1.2em;
-    text-shadow: none;
-    margin: 0;
-    color: #53586b;
-    line-height: 1.2;
-    margin-bottom: 20px;
-    padding-bottom: 6px;
-    border-bottom: 1px solid #53586b;
-    text-align: left;
-        text-transform: uppercase;
-        display: none;
-  }
+    #login {
+      left: 0;
+    }
 
-  input {
-    background: #fff;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    padding: 10px 4%;
-    width: 90%;
-    font-size: 0.9em;
-    font-family: CompassSans-Light,AvenirNextLTPro-Light,sans-serif!important;
-    font-weight: 200;
-    -webkit-transition: 0.1s all;
-    transition: 0.1s all;
-    outline: 0;
-    -webkit-appearance: none;
-    border: 1px solid #bfc1cc;
-    border-radius: 2px;
-    margin-bottom: 10px;
-        margin-top: -5px;
-  }
+    form {
+      text-align: left;
+    }
 
-  .btn {
-    font-size: 14px;
+    * {
+      text-shadow: none;
+    }
+
+    #create-a-user {
+      display: block;
+    }
+
+    a {
+      color: white !important;
+    }
+
+    label {
+      font-size: 0.8em;
+
+      i {
+        margin-right: 5px;
+      }
+    }
+
+    h4 {
+      font-size: 1.2em;
+      text-shadow: none;
+      margin: 0;
+      color: #53586b;
+      line-height: 1.2;
+      margin-bottom: 20px;
+      padding-bottom: 6px;
+      border-bottom: 1px solid #53586b;
+      text-align: left;
+      text-transform: uppercase;
+      display: none;
+    }
+
+    input {
+      background: #fff;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      padding: 10px 4%;
+      width: 90%;
+      font-size: 0.9em;
+      font-family: CompassSans-Light,AvenirNextLTPro-Light,sans-serif!important;
+      font-weight: 200;
+      -webkit-transition: 0.1s all;
+      transition: 0.1s all;
+      outline: 0;
+      -webkit-appearance: none;
+      border: 1px solid #bfc1cc;
+      border-radius: 2px;
+      margin-bottom: 10px;
+      margin-top: -5px;
+    }
+
+    .btn {
+      font-size: 14px;
       font-family: CompassSans-Medium;
       text-transform: uppercase;
       padding: 13px 20px;
@@ -154,92 +155,90 @@
       margin-top: 12px;
       border: none;
       letter-spacing: 1px;
-      transition: all .1s ease-out;
+      transition: all 0.1s ease-out;
 
       &:hover {
         background: linear-gradient(135deg,#3d9898,#2187b7);
       }
-  }
+    }
 
-  .buttons {
-    display: flex;
-    justify-content: space-between;
-  }
+    .buttons {
+      display: flex;
+      justify-content: space-between;
+    }
 
-  .createnew {
-    background: none;
-    text-align: center;
-    color: black;
-    width: 100%;
-    border: 0;
-  }
+    .createnew {
+      background: none;
+      text-align: center;
+      color: black;
+      width: 100%;
+      border: 0;
+    }
 
-  .signin {
-    border-bottom: 1px solid #009c83;
-    border-right: 2px solid #009c83;
-    display: inline-block;
-    color: white;
-  }
+    .signin {
+      border-bottom: 1px solid #009c83;
+      border-right: 2px solid #009c83;
+      display: inline-block;
+      color: white;
+    }
 
-  .signup {
-    color: #009c83;
-    border: 1px solid #009c83;
-    background: white;
-    left:300px;
-  }
+    .signup {
+      color: #009c83;
+      border: 1px solid #009c83;
+      background: white;
+      left: 300px;
+    }
 
-  .forgot {
-    text-align: center;
-    margin-top: 15px;
+    .forgot {
+      text-align: center;
+      margin-top: 15px;
+
+      a {
+        font-size: 0.8em;
+        color: #5f5f5f;
+        text-shadow: none;
+        text-align: center;
+        padding: 5px;
+      }
+    }
 
     a {
-      font-size: 0.8em;
-      color: #5f5f5f;
-      text-shadow: none;
-      text-align: center;
-      padding: 5px;
+      text-shadow: 0;
     }
   }
 
-
-
-  a {
-    text-shadow: 0;
-  }
-}
-.secondarylink {
-  font-size: 10px!important;
-  letter-spacing: 1px;
-  color: white;
-  text-align: center;
-  Width: 100%;
-  display: block;
-  margin-top: 20px;
-  text-transform: uppercase;
-  position: absolute;
-  bottom: 0;
-  background: #32364a;
-  padding: 5px;
-  border-top: 1px solid #d4e3e8;
-  transition: all .1s ease-out;
-
-  &:hover {
-    cursor:pointer;
-    background: #4d5684;
+  .secondarylink {
+    font-size: 10px!important;
+    letter-spacing: 1px;
     color: white;
+    text-align: center;
+    Width: 100%;
+    display: block;
+    margin-top: 20px;
+    text-transform: uppercase;
+    position: absolute;
+    bottom: 0;
+    background: #32364a;
+    padding: 5px;
+    border-top: 1px solid #d4e3e8;
+    transition: all 0.1s ease-out;
+
+    &:hover {
+      cursor: pointer;
+      background: #4d5684;
+      color: white;
+    }
   }
-}
 }
 
 .overlay {
-  height:100%;
-  width:100%;
+  height: 100%;
+  width: 100%;
   position: fixed;
   background: black;
   opacity: 0;
   z-index: 1;
-  display:none;
-
+  display: none;
   @media(max-width: 800px) {
     display: none;
   }
