removed extract const declaration

--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -10,7 +10,7 @@
 		&::after {
 			content: '\f002';
 			font-family: "Font Awesome 5 Pro";
-			font-weight: 900;
+			font-weight: 500;
 			display: inline-block;
 			font-style: normal;
 			font-variant: normal;
@@ -141,7 +141,7 @@
 		a {
 			border: 0;
 			padding: 7px 12px;
-			color: #7299b3;
+			color: #497CA6;
 			line-height: 1.5em;
 			display: inline-block;
 			margin: 0 10px 10px 0;
@@ -151,7 +151,7 @@
 			-ms-transition: all 0.2s ease;
 			-o-transition: all 0.2s ease;
 			transition: all 0.2s ease;
-			background: #dbe7f7;
+			background: #d3e2f5;
 			flex-grow: 1;
 			text-align: center;
 			.transition(all 0.2s ease);
