--- a/src/less/login.less
+++ b/src/less/login.less
@@ -29,12 +29,13 @@
     opacity: 0;
     width: 100%;
     display: none;
+    padding: 20px 5% 0;
 
     #error {
       color: #902454;
       line-height: 1.2;
       display: none;
-      padding: 20px 5%;
+
       position: relative;
       top: 0;
       z-index: 9;
@@ -70,14 +71,13 @@
     #login,
     #signup {
       width: 210px;
+      height: 247px;
       top: 0;
       position: relative;
       padding: 30px 20px;
       -webkit-transition: all 0.3s ease-out;
       transition: all 0.3s ease-out;
-      height:100%;
       position: relative;
-      height: -webkit-fill-available;
     }
 
     #login {
