--- a/custom-signup-account.hbs
+++ b/custom-signup-account.hbs
@@ -14,6 +14,7 @@
 	<script src="{{asset "/js/includes/secret.js"}}"></script>
 	<script src="{{asset "/js/includes/jquery.min.js"}}"></script>
 	<link rel="stylesheet" type="text/css" href="{{asset "/css/MyFontsWebfontsKit.css"}}">
+	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-9ralMzdK1QYsk4yBY680hmsb4/hJ98xK3w0TIaJ3ll4POWpWUYaA2bRjGGujGT8w" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="{{asset "css/main.min.css"}}">
 	<script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.0.8/stitch.js"></script>
 
@@ -45,7 +46,7 @@
 							<input type="password" class="form-control" id="create-a-user-password" aria-label="create-a-user-password" />
 							<button class="btn btn-success" onclick="handleSignup()">Create Account</button>
 						</form>
-						<div><i class="fal fa-arrow-left"></i><a class="secondarylink">< Actually nevermind</a></div>
+						<div><i class="fas fa-arrow-alt-left"></i><a href="/" class="secondarylink"> Actually nevermind</a></div>
 					</div>
 
 					<div id="resend-confirmation" hidden>
