--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -21,7 +21,7 @@
   font-weight: 500;
 
   .page-title {
-    margin: 40px 40px 30px!important !important;
+    margin: 40px 40px 30px !important;
     font-weight: 500;
     @media(max-width: 1100px) {
       font-size: 3em;
