--- a/custom-signup-account.hbs
+++ b/custom-signup-account.hbs
@@ -48,10 +48,9 @@
 						<h4>Send a New Confirmation Email</h4>
 						<label for="resend-confirmation-email">Email:</label>
 						<input type="text" class="form-control" id="resend-confirmation-email" aria-label="resend-confirmation-email" autocomplete="new-password"/>
-						<button class="btn btn-success" onclick="handleResendConfirmation()">Re-Send Confirmation Emai </button>
-						<a href="/" class="btn btn-secondary" onclick="showControlPanel()">Go Back</a>
+						<button class="btn btn-success" onclick="handleResendConfirmation()">Re-Send Confirmation Email</button>
+						<a href="/" class="btn btn-secondary">Go Back</a>
 					</div>
-
 
 					<div id="finished-registration" hidden>
 						<a class="btn btn-success" href="/">Ok cool</a>
@@ -100,13 +99,11 @@
 
 		async function handleLogout() {
 			await stitchClient.auth.logout();
-			showControlPanel();
 		}
 
 		async function handleResendConfirmation() {
 			const email = resendConfirmationEmailEl.value;
 			await emailPasswordClient.resendConfirmationEmail(email);
-			showControlPanel();
 		}
 
 		// DOM Element Variables
@@ -160,15 +157,6 @@
 			clearNotifications();
 			resendConfirmationEl.hidden = true;
 			loginFormEl.hidden = false;
-			loggedInEl.hidden = true;
-			postRegistrationEl.hidden = true;
-		}
-
-		function showControlPanel() {
-			clearNotifications()
-			resendConfirmationEl.hidden = true;
-			loginFormEl.hidden = true;
-			registerFormEl.hidden = true;
 			loggedInEl.hidden = true;
 			postRegistrationEl.hidden = true;
 		}
