--- a/src/less/transactional.less
+++ b/src/less/transactional.less
@@ -82,7 +82,9 @@
 
     #finished-registration {
       .btn {
-        background: linear-gradient(135deg,#4fc388,#21b6b7);
+        a {
+            background: linear-gradient(135deg,#4fc388,#21b6b7);
+        }
       }
     }
   }
