--- a/custom-signup-account.hbs
+++ b/custom-signup-account.hbs
@@ -48,9 +48,11 @@
 							<input type="text" class="form-control" id="resend-confirmation-email" aria-label="resend-confirmation-email" autocomplete="new-password"/>
 							<button class="btn btn-success" onclick="handleResendConfirmation()">Re-Send Confirmation Email</button>
 						</div>
-						<div><a href="/" class="secondarylink"><i class="fas fa-arrow-alt-left"></i> Actually nevermind</a></div>
+						<div>
+							<a href="/" class="secondarylink"><i class="fas fa-arrow-alt-left"></i> Actually nevermind</a>
+						</div>
 					</div>
-					<a href="/" class="btn btn-secondary">Go Back</a>
+					<!--<a href="/" class="btn btn-secondary">Go Back</a>-->
 				</div>
 		{{/post}}
 		<!-- end main post area -->
