--- a/custom-signup-account.hbs
+++ b/custom-signup-account.hbs
@@ -29,6 +29,7 @@
 					<div id="info">
 						<div id="success"><i class='fas fa-exclamation-triangle'></i></div>
 						<div id="error"></div>
+						<div id="logged-in">You're logged in now!</div>
 					</div>
 					<div class="signup">
 						<h1>{{title}}</h1>
