--- a/src/less/transactional.less
+++ b/src/less/transactional.less
@@ -178,6 +178,26 @@
         margin-right: 10px;
       }
     }
+
+    #logged-in {
+      background: #c4e6c4;
+      text-align: center;
+      padding: 5px;
+      color: #004800;
+      display: none;
+
+      &::before {
+        content: "\f00c";
+        font-family: "Font Awesome 5 Pro";
+        font-weight: 900;
+        display: inline-block;
+        font-style: normal;
+        font-variant: normal;
+        text-rendering: auto;
+        -webkit-font-smoothing: antialiased;
+        margin-right: 10px;
+      }
+    }
   }
 
   input:-webkit-autofill,
