--- a/src/less/login.less
+++ b/src/less/login.less
@@ -35,7 +35,6 @@
       color: #902454;
       line-height: 1.2;
       display: none;
-
       position: relative;
       top: 0;
       z-index: 9;
@@ -62,6 +61,18 @@
       display: none;
       padding: 10px 15%;
       position: relative;
+
+      &::before {
+        content: "\f00c";
+        font-family: "Font Awesome 5 Pro";
+        font-weight: 900;
+        display: inline-block;
+        font-style: normal;
+        font-variant: normal;
+        text-rendering: auto;
+        -webkit-font-smoothing: antialiased;
+        margin-right: 10px;
+      }
     }
   }
 
@@ -239,7 +250,7 @@
   opacity: 0;
   z-index: 1;
   display: none;
-  
+
   @media(max-width: 800px) {
     display: none !important;
   }
