--- a/src/less/transactional.less
+++ b/src/less/transactional.less
@@ -122,7 +122,9 @@
 
   .secondarylink {
     color: @header-color;
-    font-weight: 700;
+    color: #276890;
+    font-weight: 500;
+    font-size: .9em;
 
     i {
       font-family: "Font Awesome 5 Pro";
@@ -141,11 +143,11 @@
     position: relative;
 
     #error {
-      padding: 10px 20px;
+      padding: 5px;
       background: #d0b8d2;
       color: #604769;
-      /*border: 1px solid #b5a2a5;*/
       display: none;
+      text-align: center;
 
       &::before {
         content: "\f071";
