--- a/custom-signup-account.hbs
+++ b/custom-signup-account.hbs
@@ -114,7 +114,7 @@
 		const loggedInEl = document.getElementById("logged-in");
 		const postRegistrationEl = document.getElementById("finished-registration");
 
-			const successEl = document.getElementById("success");
+		const successEl = document.getElementById("success");
 		const errorEl = document.getElementById("error");
 
 		// Notification Functions
@@ -177,7 +177,7 @@
 			resendConfirmationEl.hidden = true;
 			loggedInEl.hidden = true;
 			postRegistrationEl.hidden = false;
-			$('#create-a-user btn').css('display', 'none');
+			$('#create-a-user .btn').css('display', 'none');
 			$('.secondarylink').css('display', 'none');
 		}
 
