--- a/src/less/transactional.less
+++ b/src/less/transactional.less
@@ -210,7 +210,8 @@
       color: #fff;
       margin: 0 auto;
       background: linear-gradient(345deg,#3da771,#21b7b0);
-      transition: all .3s easeout;
+      line-height: 1;
+      transition: all .3s ease-out;
 
       &:hover {
           background: linear-gradient(345deg,#1a8645,#0c9696);
@@ -219,7 +220,7 @@
       a {
           font-size: 15px;
           line-height: 1;
-          margin: 40px auto 20px;
+          margin: 40px auto;
       }
     }
   }
