--- a/src/less/code.less
+++ b/src/less/code.less
@@ -77,12 +77,16 @@ code {
   }
 */
   .hljs-addition,
-  .hljs-attribute,
   .hljs-meta-string,
   .hljs-regexp,
   .hljs-string {
-    color: #7cdfe4!important;
+    /*color: #7cdfe4!important;*/
+    color: #e4f2ff;
     font-size: 13px;
+  }
+
+  .hljs-attribute {
+    color: #d8b061;
   }
 
   .hljs-attr,
@@ -93,7 +97,13 @@ code {
   .hljs-template-variable,
   .hljs-type,
   .hljs-variable {
-    color: #997ca7;
+    color: #bc82d8;
+  }
+
+  .hljs-function{
+    .hljs-keyword {
+      color: #d667c1;
+    }
   }
 
 
