--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -148,7 +148,7 @@
 	}
 
 	.menu {
-		width: 350px;
+		width: 300px;
 		/*width: 300px;Delete this later */
 		float: right;
 		display: flex;
@@ -169,6 +169,11 @@
 			 position: relative;
 			border-right: 1px solid rgba(255, 255,255, 0);
 			/*display: none;  Delete this later */
+			opacity:0 !important;
+			width:0 !important;
+			overflow: hidden !important;
+			padding:0 !important;
+			margin-right: -50px;
 
 			@media(max-width: 800px) {
 		    display: none;
