--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -292,6 +292,7 @@
     border: 1px solid #dadada;
     height: fit-content;
     transition: all 0.3s ease-out;
+        height: 271px!important;
     @media(max-width: 800px) {
       width: 100%;
       margin: 0 0 15px;
