wasted a ton of time restyling a bunch of buttons that nobody will notice as a way to distract myself from horrible depression

--- a/default.hbs
+++ b/default.hbs
@@ -17,6 +17,7 @@
 	{{! Scripts }}
 	<script type="text/javascript" src="https://hackersandslackers.com/public/ghost-sdk.min.js"></script>
 	<script src="{{asset "/js/includes/jquery.min.js"}}"></script>
+	<script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.0.8/stitch.js"></script>
 	<script src="{{asset "/js/includes/secret.js"}}"></script>
 	{{#is "post"}}
 		<meta property="og:image" content="{{img_url feature_image}}">
