--- a/src/less/postheader.less
+++ b/src/less/postheader.less
@@ -6,14 +6,18 @@
   position: relative;
   width: auto;
   padding: 0;
-  background-image: linear-gradient(164deg,#029be8 1%,#2e2ca9 100%);
+  background: radial-gradient( circle 400px at 19.8% 14.4%,  rgb(0, 165, 248) 0%, rgb(55, 86, 212) 100.3% );
   z-index: 100;
   @media(max-width: 800px) {
     margin: auto;
     position: relative !important;
     width: auto;
-    padding: 0 10px;
-    height: 59px;
+    padding: 0 40px;
+    height: 70px;
+  }
+
+  @media(max-width: 800px) {
+        padding: 0 40px;
   }
 
   #account{
@@ -26,9 +30,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 30px;
+    padding: 20px 35px;
+
     @media(max-width: 800px) {
       padding: 0;
+      height: 100%;
     }
   }
 
@@ -58,9 +64,8 @@
     opacity: 1;
     display: none;
     @media(max-width: 800px) {
-      margin: 8px !important;
-      height: 40px;
-      width: 40px;
+      height: 45px;
+      width: 45px;
       display: block;
     }
   }
