--- a/src/less/post.less
+++ b/src/less/post.less
@@ -15,7 +15,7 @@
 		}
 
 		article {
-			margin: 70px auto 0;
+			margin: 5vw auto 0;
 			box-shadow: @shadow-color;
 
 			@media(max-width: 800px) {
@@ -47,7 +47,7 @@
 
 		@media(max-width: 800px) {
 			font-weight: 500;
-			font-size: 1.8em;
+			font-size: 2em;
 			white-space: normal;
 			text-align: center !important;
 		}
@@ -71,7 +71,7 @@
 		color: @h1-color;
 
 		@media(max-width: 800px) {
-			margin: 15px auto 0;
+			margin: 10px auto 0;
 			font-size: 1.2em;
 			text-align: center;
 			line-height: 1.2;
@@ -172,7 +172,7 @@
 		width: auto;
 		align-items: center;
 		@media(max-width: 800px) {
-			margin: 10px 40px;
+			margin: 0px 40px;
 			justify-content: space-around;
 		}
 		@media(max-width: 600px) {
@@ -710,7 +710,7 @@
 			margin: 10px 0 20px;
 		}
 		@media(max-width: 800px) {
-			margin: 35px 35px 10px;
+			margin: 35px 40px 10px;
 		}
 	}
 
@@ -815,6 +815,13 @@
 
 	.featured-media {
 		line-height: 1;
+		@media(max-width: 800px) {
+			  margin: 40px 40px 0 40px;
+		}
+
+		@media (max-width: 600px){
+			    margin: 20px 20px 0;
+			}
 
 		img {
 			width: 100%;
@@ -841,6 +848,7 @@
 			margin-left: 15px;
 			padding-left: 0;
 			margin-bottom: 20px;
+
 			@media(max-width:600px) {
 				margin: 0 20px;
 				padding-left: 0;
