--- a/post.hbs
+++ b/post.hbs
@@ -40,7 +40,7 @@
 
 					{{#has tag="Roundup"}}
 					<div class="post-roundup-blurb">
-						<div class="blurb-icon"></div>
+						<i class="fal fa-flask"></i>
 						<p>Scientist Snkia escapes from his lab every night to warn humanity of his findings. He is no madman... he is Legend. These links are his gifts.</p>
 					</div>
 					{{/has}}
