--- a/src/less/linkpreview.less
+++ b/src/less/linkpreview.less
@@ -107,17 +107,9 @@
 
 
   &:hover {
-    background-color: @theme-color;
-    color: #fff;
+    background-color: #e3e9f3;
     cursor: pointer;
     text-decoration: none;
 
-    a,
-    h4,
-    p,
-    span,
-    i {
-      color: #fff;
-    }
   }
 }
