--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -327,6 +327,14 @@
 		background: @button-color;
 		border-bottom: 1px solid #009c83;
 		border-right: 2px solid #009c83;
+		transition: all .3s ease-out;
+
+		&:hover {
+			
+			border-bottom: 1px solid #00309c;
+			border-right: 2px solid #004d9c;
+		}
+
 		@media(max-width: 600px) {
 			padding: 13px 18px;
 			font-family: AvenirNextLTPro-Regular,serif;
