--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -24,7 +24,7 @@
     * {
       color: #69a202 !important;
     }
-
+/*
     span::before {
       font-family: "Font Awesome 5 Pro";
       font-weight: 400;
@@ -34,7 +34,7 @@
       font-variant: normal;
       text-rendering: auto;
       -webkit-font-smoothing: antialiased;
-    }
+    }*/
   }
 
   .aws {
