--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -18,7 +18,8 @@
 			-webkit-font-smoothing: antialiased;
 			right: 13px;
 			top: 8px;
-			    position: absolute;
+			position: absolute;
+			    color: #9aa1bd;
 		}
 
 		#my-custom-input {
@@ -157,6 +158,7 @@
 			.transition(all 0.2s ease);
       transition: all .2s ease;
       box-shadow: 1px 1px 0 #c8d3e2;
+
 			@media(max-width: 1000px) {
 				font-size: 0.77em !important;
 				margin: 0 5px 5px 0;
@@ -166,6 +168,7 @@
 				color: @white;
 				background: @theme-color;
 				text-decoration: none;
+				box-shadow: 1px 1px 0 #667c98;
 			}
 		}
 	}
@@ -231,6 +234,7 @@
 
 			input {
 				font-weight: 100;
+				border: 1px solid #d5dbe6;
 				transition: all 0.3s all;
 
 				&::placeholder {
