--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -292,7 +292,8 @@
     border: 1px solid #dadada;
     height: fit-content;
     transition: all 0.3s ease-out;
-        height: 271px!important;
+    height: -webkit-fit-content !important;
+
     @media(max-width: 800px) {
       width: 100%;
       margin: 0 0 15px;
@@ -306,11 +307,14 @@
       .tag-title {
         background: linear-gradient(0deg, rgba(2, 0, 36, 0) 0%, #007ad4 100%);
       }
-    }
 
-    h2,
-    span {
-      color: white !important;
+      h2, span, p {
+        color: #1e608a!important;
+      }
+
+      .img-wrapper {
+        opacity: .7;
+      }
     }
 
     p {
@@ -329,6 +333,7 @@
       width: 100%;
       height: 180px;
       position: relative;
+      transition: all .3s ease-out;
     }
 
     .meta-info {
@@ -352,15 +357,17 @@
       display: -ms-flexbox;
       display: flex;
       align-items: left;
-          height: fit-content;
+      height: fit-content;
       flex-direction: column;
+      min-height: 61px;
 
       h2 {
-        color: #37363e!important;
-        font-size: 1.2em;
+        color: #37363e;
+        font-size: 1.1em;
         line-height: 1;
         margin: 0;
-        font-weight: 500;
+        font-weight: 600;
+        font-family: AvenirNextLTPro-Regular;
       }
 
       p {
@@ -368,13 +375,15 @@
         color: @text-color;
         margin: 5px 0;
         line-height: 1.2;
-            text-align: left;
+        text-align: left;
+        font-weight: 100;
+        font-family: AvenirNextLTPro-Light;
       }
 
       span {
         font-size: 0.7em;
         line-height: 1.5;
-        color: #37363F !important;
+        color: #37363F;
       }
     }
   }
