--- a/src/less/post.less
+++ b/src/less/post.less
@@ -308,27 +308,32 @@
 	}
 
 	.post-roundup-blurb {
-		border-bottom: 0;
-		border-top: 0;
-		padding: 20px;
-		background: #e6f1ec;
-		border-left: 5px solid #9de2bb;
-		margin: 30px 60px;
-		width: auto;
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		min-height: 50px;
+		padding: 20px 40px;
+    background: none;
+    border-top: 1px solid #62bf89;
+    margin: 30px 60px 60px;
+    width: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 50px;
+    border-bottom: 1px solid #62bf89;
+    border-left: 0;
+
 		@media(max-width: 800px) {
 			margin: 30px 40px;
 		}
 		@media(max-width: 600px) {
 			padding: 20px 0;
-			border-bottom: 0;
-			border-top: 0;
 			padding: 15px 20px;
 			margin: 25px 30px 30px;
 			width: auto;
+		}
+
+		i {
+			font-size: 37px;
+	    margin-right: 25px;
+	    color: #4e9e79;
 		}
 
 		.blurb-icon {
@@ -363,7 +368,7 @@
 				line-height: 1.3!important;
 			}
 			@media (max-width: 600px) {
-				font-size: 0.9em;
+				font-size: 0.8em;
 				text-align: justify;
 				line-height: 1.5 !important;
 				font-style: normal;
