--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -5,6 +5,7 @@
 @secondary-color: #30b1a7;				// secondary theme color
 @hover-color: #40cebb;
 @button-color: linear-gradient(135deg,rgb(79, 195, 136),rgb(33, 182, 183));
+@button-hover: linear-gradient(135deg,#53c2f7,#1e6792);
 @h1-color: #153b52;
 @header-color: #276890;
 @bg-color: #ecf1f9;					// Background color / secndary theme color
