--- a/partials/widget-medium.hbs
+++ b/partials/widget-medium.hbs
@@ -25,11 +25,11 @@ function createMediumCard(medium){
 }
 
 
-stitchClient.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user => {
+client.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user => {
   console.log('logged in anonymously as user')
 });
 
-stitchClient.callFunction("getGithubUsers", ["{{slug}}"]).then(result => {
+client.callFunction("getGithubUsers", ["{{slug}}"]).then(result => {
   createMediumCard(result.medium)
 });
 
