post blurb and heder

--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -148,8 +148,8 @@
 	}
 
 	.menu {
+		/*idth: 300px;*/
 		width: 300px;
-		/*width: 300px;Delete this later */
 		float: right;
 		display: flex;
 		justify-content: space-between;
@@ -168,7 +168,7 @@
 			transition: all .1s ease-out;
 			 position: relative;
 			border-right: 1px solid rgba(255, 255,255, 0);
-			/*display: none;  Delete this later */
+			display: none;  /*Delete this later */
 			opacity:0 !important;
 			width:0 !important;
 			overflow: hidden !important;
@@ -176,7 +176,6 @@
 			margin-right: -50px;
 
 			@media(max-width: 800px) {
-		    display: none;
 		  }
 
 			&:hover {
