--- a/src/less/pagination.less
+++ b/src/less/pagination.less
@@ -43,9 +43,8 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	width: 100%;
+	width: auto;
 	height: 60px;
-
 
 	@media(max-width: 1000px){
 		padding:0 20px;
