--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -157,17 +157,17 @@
 
 
   .datascience {
-    color: #118e84 !important;
-    background-color: lighten(#118e84, 65%);
+    color: #449a8c !important;
+    background-color: #ccece7;
 
     * {
-      color: #118e84 !important;
+      color: #449a8c !important;
     }
   }
 
   .tableau {
     color: #af7409 !important;
-    background-color: #fff8ec;
+    background-color: #f3e4ca;
 
     * {
       color: #af7409 !important;
@@ -176,7 +176,7 @@
 
   .python {
     color: #0A9CC5 !important;
-    background-color: lighten(#0A9CC5, 55%);
+    background-color: #d2eef7;
 
     * {
       color: #0A9CC5 !important;
