--- a/post.hbs
+++ b/post.hbs
@@ -41,7 +41,7 @@
 					{{#has tag="Roundup"}}
 					<div class="post-roundup-blurb">
 						<i class="fal fa-flask"></i>
-						<p>Scientist Snkia escapes from his lab every night to warn humanity of his findings. He is no madman... he is Legend. These links are his gifts.</p>
+						<p>Resident Scientist Snkia works tirelessly towards robot utopia. These are his findings.</p>
 					</div>
 					{{/has}}
 
