--- a/src/less/post.less
+++ b/src/less/post.less
@@ -49,6 +49,10 @@
 			font-weight: 500;
 			font-size: 2em;
 			white-space: normal;
+			text-align: left !important;
+		}
+
+		@media(max-width: 600px) {
 			text-align: center !important;
 		}
 
@@ -73,9 +77,7 @@
 		@media(max-width: 800px) {
 			margin: 10px auto 0;
 			font-size: 1.2em;
-			text-align: center;
 			line-height: 1.2;
-			max-width: 90%;
 			font-family: AvenirNextLTPro-Regular,serif;
 			font-weight: 600;
 		}
@@ -83,6 +85,7 @@
 			font-size: 1.1em;
 			line-height: 1.3;
 			max-width: 95%;
+			text-align: center;
 		}
 	}
 
@@ -172,8 +175,7 @@
 		width: auto;
 		align-items: center;
 		@media(max-width: 800px) {
-			margin: 0px 40px;
-			justify-content: space-around;
+
 		}
 		@media(max-width: 600px) {
 			display: flex;
@@ -183,6 +185,7 @@
 			width: auto;
 			margin: 0 35px !important;
 			padding-top: 0;
+			justify-content: space-around;
 		}
 
 		span {
@@ -251,7 +254,7 @@
 			align-items: center;
 			text-transform: capitalize;
 			line-height: 1;
-			@media(max-width: 800px) {
+			@media(max-width: 600px) {
 				margin: 0 !important;
 			}
 
@@ -308,21 +311,20 @@
 	}
 
 	.post-roundup-blurb {
-		padding: 20px 40px;
-    background: none;
-    border-top: 1px solid #62bf89;
-    margin: 30px 60px 60px;
-    width: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 50px;
-    border-bottom: 1px solid #62bf89;
-    border-left: 0;
+		padding: 10px 40px;
+		background: 0 0;
+		border-top: 0;
+		margin: 30px 60px 60px;
+		width: auto;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		min-height: 50px;
+		border-bottom: 0;
+		border-left: 5px solid #7daf8a;
+		background: #ecf1ec;
 
-		@media(max-width: 800px) {
-			margin: 30px 40px;
-		}
+		
 		@media(max-width: 600px) {
 			padding: 20px 0;
 			padding: 15px 20px;
@@ -333,7 +335,7 @@
 		i {
 			font-size: 37px;
 	    margin-right: 25px;
-	    color: #4e9e79;
+	    color: #7daf8a;
 		}
 
 		.blurb-icon {
@@ -355,13 +357,14 @@
 		}
 
 		p {
-			line-height: 1.5 !important;
-			font-family: 'AvenirNextLTPro-Regular';
-			color: #1a6948;
-			font-size: 1em;
-			width: auto;
+			line-height: 1.5!important;
+			font-family: AvenirNextLTPro-Regular;
+			color: #559d6c;
+			font-size: 1.1em;
+			width: 100%;
 			margin: 0;
 			text-align: justify;
+			font-style: italic;
 			@media (max-width: 800px) {
 				font-size: 0.9em;
 				text-align: justify;
@@ -715,7 +718,7 @@
 			margin: 10px 0 20px;
 		}
 		@media(max-width: 800px) {
-			margin: 35px 40px 10px;
+			margin: 35px 35px 10px;
 		}
 	}
 
@@ -729,6 +732,10 @@
 				width: 200px !important;
 				max-width: none;
 			}
+		}
+
+		@media(max-width: 600px) {
+			padding: 0 15px;
 		}
 	}
 
