--- a/src/less/postheader.less
+++ b/src/less/postheader.less
@@ -16,8 +16,8 @@
     height: 70px;
   }
 
-  @media(max-width: 800px) {
-        padding: 0 40px;
+  @media(max-width: 600px) {
+        padding: 0 25px;
   }
 
   #account{
@@ -59,7 +59,7 @@
     height: 50px;
     width: 50px;
     display: block;
-    margin: 15px;
+    margin: 15px 0;
     z-index: 100;
     opacity: 1;
     display: none;
@@ -67,6 +67,9 @@
       height: 45px;
       width: 45px;
       display: block;
+    }
+    @media(max-width: 600px) {
+      margin:0;
     }
   }
 
