--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -303,7 +303,7 @@
 .content {
 	padding: 20px 30px;
 	@media(max-width: 600px) {
-		padding: 20px;
+		 padding: 20px 30px;
 	}
 }
 
@@ -330,7 +330,7 @@
 		transition: all .3s ease-out;
 
 		&:hover {
-			
+
 			border-bottom: 1px solid #00309c;
 			border-right: 2px solid #004d9c;
 		}
