--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -39,7 +39,7 @@
 
   .aws {
     color: #c37a32 !important;
-    background-color: lighten(#e9903a, 40%);
+    background-color: #ffecdd;
 
     * {
       color: #c37a32 !important;
