--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -154,7 +154,7 @@
 			transition: all 0.2s ease;
 			background: #d3e2f5;
 			flex-grow: 1;
-			text-align: center;
+			 text-align: center;
 			.transition(all 0.2s ease);
       transition: all .2s ease;
       box-shadow: 1px 1px 0 #c8d3e2;
@@ -178,6 +178,9 @@
 
 		&:first-of-type {
 			padding-top: 0;
+			margin-right: 0;
+
+
 		}
 
 		.social-btns {
@@ -382,7 +385,7 @@
 			margin: 0;
 			font-size: 15px;
 			line-height: 1.65;
-			padding-right: 44px;
+			padding-right: 0;
 		}
 	}
 
