--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -139,10 +139,24 @@
 					line-height: 1.4;
 					font-family: AvenirNextLTPro-Regular,sans-serif !important;
 					font-weight: 500;
-					display: inline-block;
+					display: block;
 
 					&:hover {
 						color: @theme-color;
+					}
+				}
+
+			.info {
+				display:flex;
+				flex-direction: column;
+				
+					.role {
+						color: #fff;
+				    opacity: .5;
+				    font-size: .9em;
+				    margin-top: 9px;
+				    font-weight: 200;
+				    font-family: AvenirNextLTPro-Light,sans-serif;
 					}
 				}
 
