--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -228,4 +228,13 @@
     }
   }
 
+  .javascript {
+    background: #fff2be;
+    color: #ad8303 !important;
+
+    * {
+      color: #ad8303 !important;
+    }
+  }
+
 }
