--- a/src/less/post.less
+++ b/src/less/post.less
@@ -90,30 +90,38 @@
 	}
 
 	h2 {
-		margin: 40px auto 15px;
-		color: @header-color;
+		margin: 40px 0 10px;
+		color: #276890;
 		line-height: 1.2;
-		font-family: 'CompassSans-Regular';
+		font-family: CompassSans-Regular;
 		font-size: 2em;
-		border-bottom: 1px solid #d7e8ec;
-		padding-bottom: 5px;
-		font-weight: 200 !important;
+		font-weight: 200!important;
+		font-size: 1.8em;
+		width: fit-content;
+		/* text-align: left; */
+		padding-right: 10px;
 		@media(max-width: 800px) {
 			font-size: 1.9em;
 			padding-bottom: 9px;
 		}
 		@media(max-width: 600px) {
-			font-size: 1.6em;
+			font-size: 1.4em;
+			width: 100%;
+			line-height: 1.3;
+			text-align: center;
+			font-weight: 500 !important;
+			border: none;
 		}
 	}
 
 	h3 {
-		font-size: 1.4em;
+		font-size: 1.3em;
 		line-height: 1.2;
 		color: #365c8e;
 		font-weight: 500;
 		margin-top: 50px;
 		color: @header-color;
+		margin-bottom: 12px;
 		@media(max-width: 800px) {
 			font-weight: 600;
 			font-size: 1.3em;
@@ -168,7 +176,7 @@
 	}
 
 	.post-meta {
-		margin: auto 60px 50px;
+		margin: auto 80px 50px;
 		color: #40627b;
 		font-size: 12px;
 		display: flex;
@@ -314,7 +322,7 @@
 		padding: 10px 40px;
 		background: 0 0;
 		border-top: 0;
-		margin: 30px 60px 60px;
+		margin: 30px 80px 60px;
 		width: auto;
 		display: flex;
 		justify-content: space-between;
@@ -324,7 +332,7 @@
 		border-left: 5px solid #7daf8a;
 		background: #ecf1ec;
 
-		
+
 		@media(max-width: 600px) {
 			padding: 20px 0;
 			padding: 15px 20px;
@@ -660,7 +668,7 @@
 
 	.post-head {
 		padding: 30px 0;
-		margin: 0 60px;
+		margin: 0 80px;
 		@media(max-width: 800px) {
 			margin: 0 40px;
 		}
@@ -672,7 +680,7 @@
 	}
 
 	.post-content {
-		margin: 25px 60px 10px;
+		margin: 25px 80px 30px;
 
 		a {
 			color: @theme-color;
@@ -715,7 +723,7 @@
 		}
 
 		p {
-			margin: 10px 0 20px;
+			margin: 0 0 20px;
 		}
 		@media(max-width: 800px) {
 			margin: 35px 35px 10px;
@@ -962,7 +970,7 @@
 		.material-placeholder,
 		figure {
 			width: fit-content;
-			margin: 40px auto;
+			margin: 40px auto 20px;
 
 			img {
 				max-width: 100%;
@@ -1005,7 +1013,7 @@
 .post-template {
 	.about-author {
 		background: @white;
-		padding: 40px 60px;
+		padding: 40px 80px;
 		margin: 20px 0;
 		min-height: 88px;
 		box-shadow: 0 0 5px rgba(80,82,204,.1)!important;;
