--- a/partials/widget-authors.hbs
+++ b/partials/widget-authors.hbs
@@ -24,10 +24,9 @@
 								console.log(result);
 								return result;
 							})
-					);
+					)
 				}
-
-					$('.{{slug}} .role').textgetTitles());
+					$('.{{slug}} .role').textgetTitles();
 				</script>
 				{{/foreach}}
 			{{/get}}
