--- a/partials/widget-authors.hbs
+++ b/partials/widget-authors.hbs
@@ -17,6 +17,21 @@
 						<span class="role"></span>
 					</div>
 				</div>
+				<script>
+
+				function setRole(result) {
+					$('.' + result.slug.find('.role').text(result.title)
+				})
+
+
+				stitchClient.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user => {
+					console.log('logged in anonymously as user')
+				});
+
+				stitchClient.callFunction("AuthorTitle", "{{slug}}").then(result => {
+					setRole(result)
+				});
+				</script>
 				{{/foreach}}
 			{{/get}}
 			</div>
