--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -113,10 +113,10 @@
 				padding-bottom:10px;
 
 				.avi {
-					height:35px;
-					width:35px;
-					border-radius: 50%;
-					margin-right: 15px
+					height: 40px;
+			    width: 40px;
+			    border-radius: 0;
+			    margin-right: 15px;
 				}
 			}
 
