--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -195,6 +195,10 @@
 				position: relative;
 				top:0;
 				z-index: 10;
+				display:none !important;
+				opacity: 0 !important;
+				width: 0px !important;
+				overflow: hidden !important;
 			}
 
 			* {
