--- a/src/less/postheader.less
+++ b/src/less/postheader.less
@@ -82,6 +82,13 @@
       margin: 0;
       list-style: none;
 
+      #account{
+        display:none !important;
+				opacity: 0 !important;
+				width: 0px !important;
+				overflow: hidden !important;
+      }
+
       li::before {
         display: inline-block;
         font-style: normal;
